--- a/md_docs_2specification.html
+++ b/md_docs_2specification.html
@@ -144,12 +144,16 @@ Iteration</h2>
 <h1><a class="anchor" id="autotoc_md14"></a>
 Data persistence</h1>
 <p>The hash table can be saved and loaded into a <code>.txt</code> file.</p>
-<p><b>File format</b> </p><div class="fragment"><div class="line">count</div>
+<p><b>File format</b> </p><div class="fragment"><div class="line">CHashTable vX.x</div>
+<div class="line">count</div>
 <div class="line">key1 value1</div>
 <div class="line">key2 value2</div>
 <div class="line">key3 value3</div>
 <div class="line">...</div>
-</div><!-- fragment --><p>The <code>count</code> is the total number of key-value pairs.</p>
+</div><!-- fragment --><ul>
+<li>Header with version</li>
+<li><code>count</code> is the total number of key-value pairs.</li>
+</ul>
 <h2><a class="anchor" id="autotoc_md15"></a>
 Serialization</h2>
 <p>The foreach function iterates over all key-value pairs and writes them to the file.</p>
