deploy: 24b1591aac87bfe2041a7e5896f8c37b06ffd7af

--- a/md_docs_2specification.html
+++ b/md_docs_2specification.html
@@ -146,9 +146,9 @@ Data persistence</h1>
 <p>The hash table can be saved and loaded into a <code>.txt</code> file.</p>
 <p><b>File format</b> </p><div class="fragment"><div class="line">CHashTable vX.x</div>
 <div class="line">count</div>
-<div class="line">key1 value1</div>
-<div class="line">key2 value2</div>
-<div class="line">key3 value3</div>
+<div class="line">key1=value1</div>
+<div class="line">key2=value2</div>
+<div class="line">key3=value3</div>
 <div class="line">...</div>
 </div><!-- fragment --><ul>
 <li>Header with version</li>
