deploy: 3a355e2a0477d6b2d1cca9574124cbcdea74c9a7

--- a/hash__table__core_8c.html
+++ b/hash__table__core_8c.html
@@ -298,7 +298,7 @@ Functions</h2></td></tr>
   </table>
   </dd>
 </dl>
-<dl class="section return"><dt>Returns</dt><dd>Entry object or NULL if the element wasn't found </dd></dl>
+<dl class="section return"><dt>Returns</dt><dd>Entry object or nullptr if the element wasn't found </dd></dl>
 
 </div>
 </div>
