--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Example usage</h1>
 <div class="line">    printf(<span class="stringliteral">&quot;Value: %d\n&quot;</span>, value);</div>
 <div class="line">}</div>
 <div class="line"> </div>
-<div class="line"><a class="code hl_function" href="hash__table_8h.html#a8b5f3fafdfff65f0c1a36c02ea712ca4">hash_table_foreach</a>(table, print_all_key_value_pairs, NULL);</div>
+<div class="line"><a class="code hl_function" href="hash__table_8h.html#a8b5f3fafdfff65f0c1a36c02ea712ca4">hash_table_foreach</a>(table, print_all_key_value_pairs, <span class="keyword">nullptr</span>);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Save to file</span></div>
 <div class="line"><a class="code hl_function" href="hash__table_8h.html#a3776e0784840a9609f3922b1b95c59ec">hash_table_save</a>(table, <span class="stringliteral">&quot;hash_table.txt&quot;</span>);</div>
