--- a/md_docs_2interactive__mode.html
+++ b/md_docs_2interactive__mode.html
@@ -124,14 +124,14 @@ Example usage</h2>
 <div class="line">&gt; get 1</div>
 <div class="line">10</div>
 <div class="line">&gt; get 7</div>
-<div class="line">NULL</div>
+<div class="line">Entry doesn&#39;t exist</div>
 <div class="line">&gt; del 2</div>
 <div class="line">&gt; get 2</div>
-<div class="line">NULL</div>
+<div class="line">Entry doesn&#39;t exist</div>
 <div class="line">&gt; save</div>
 <div class="line">&gt; del 1</div>
 <div class="line">&gt; get 1</div>
-<div class="line">NULL</div>
+<div class="line">Entry doesn&#39;t exist</div>
 <div class="line">&gt; load</div>
 <div class="line">&gt; get 1</div>
 <div class="line">10</div>
