--- a/md_docs_2specification.html
+++ b/md_docs_2specification.html
@@ -135,7 +135,7 @@ Insert, search, delete behavior</h2>
 <ul>
 <li>When inserting first we check if the key exists. If so the existing entry is updated. Otherwise the new entry is prepended to the head of the list.</li>
 <li>The deletion function should return whether it was able to delete the data entry.</li>
-<li>The get method returns a pointer to the entry or <code>NULL</code> if it wasn't found.</li>
+<li>The get method returns a pointer to the entry or <code>nullptr</code> if it wasn't found.</li>
 <li>The hash table should be able to completely free itself from memory. Including all linked list nodes, and the buckets array.</li>
 </ul>
 <h2><a class="anchor" id="autotoc_md13"></a>
