--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@ Example usage</h1>
 <div class="fragment"><div class="line"><span class="preprocessor">#include &quot;<a class="code" href="hash__table_8h.html">hash_table.h</a>&quot;</span></div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Create HashTable</span></div>
-<div class="line">HashTable *table = <a class="code hl_function" href="hash__table_8h.html#a145041ed407574baae7b02482a62bcac">hash_table_create</a>();</div>
+<div class="line">HashTable *table = hash_table_create();</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Insert key-value pair</span></div>
-<div class="line"><a class="code hl_function" href="hash__table_8h.html#ac3c9737f9417f37f807ab6c03b00d1d9">hash_table_insert</a>(table, 1, 10);</div>
+<div class="line">hash_table_insert(table, 1, 10);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Get entry</span></div>
-<div class="line"><span class="keyword">const</span> <a class="code hl_struct" href="structentry.html">Entry</a> *<a class="code hl_struct" href="structentry.html">entry</a> = <a class="code hl_function" href="hash__table_8h.html#a8d53f49b5d48520f25043c0e1e77f9cc">hash_table_get</a>(table, 1);</div>
+<div class="line"><span class="keyword">const</span> <a class="code hl_struct" href="structentry.html">Entry</a> *<a class="code hl_struct" href="structentry.html">entry</a> = hash_table_get(table, 1);</div>
 <div class="line">printf(<span class="stringliteral">&quot;Key: %d\n&quot;</span>, <a class="code hl_struct" href="structentry.html">entry</a>-&gt;key);</div>
 <div class="line">printf(<span class="stringliteral">&quot;Value: %d\n&quot;</span>, <a class="code hl_struct" href="structentry.html">entry</a>-&gt;value);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Delete entry</span></div>
-<div class="line"><span class="keywordtype">bool</span> success = <a class="code hl_function" href="hash__table_8h.html#a085d39918c30cf7ca3724c1f14a17bcd">hash_table_delete</a>(table, 1);</div>
+<div class="line"><span class="keywordtype">bool</span> success = hash_table_delete(table, 1);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Foreach</span></div>
 <div class="line"><span class="keywordtype">void</span> print_all_key_value_pairs(<span class="keywordtype">int</span> key, <span class="keywordtype">int</span> value, <span class="keywordtype">void</span> *user_data) {</div>
@@ -129,30 +129,22 @@ Example usage</h1>
 <div class="line">    printf(<span class="stringliteral">&quot;Value: %d\n&quot;</span>, value);</div>
 <div class="line">}</div>
 <div class="line"> </div>
-<div class="line"><a class="code hl_function" href="hash__table_8h.html#a8b5f3fafdfff65f0c1a36c02ea712ca4">hash_table_foreach</a>(table, print_all_key_value_pairs, <span class="keyword">nullptr</span>);</div>
+<div class="line">hash_table_foreach(table, print_all_key_value_pairs, <span class="keyword">nullptr</span>);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Save to file</span></div>
-<div class="line"><a class="code hl_function" href="hash__table_8h.html#a3776e0784840a9609f3922b1b95c59ec">hash_table_save</a>(table, <span class="stringliteral">&quot;hash_table.txt&quot;</span>);</div>
+<div class="line">hash_table_save(table, <span class="stringliteral">&quot;hash_table.txt&quot;</span>);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Load from file</span></div>
-<div class="line">HashTable *loaded_table = <a class="code hl_function" href="hash__table_8h.html#afdc97992d3940a4cc9a8f8945ace6e48">hash_table_load</a>(<span class="stringliteral">&quot;hash_table.txt&quot;</span>);</div>
+<div class="line">HashTable *loaded_table = <a class="code hl_function" href="hash__table__io_8c.html#afdc97992d3940a4cc9a8f8945ace6e48">hash_table_load</a>(<span class="stringliteral">&quot;hash_table.txt&quot;</span>);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Print for debugging</span></div>
-<div class="line"><a class="code hl_function" href="hash__table_8h.html#a8697ced64d6a6606f38717377e532a68">hash_table_print</a>(table, <span class="keyword">false</span>);</div>
+<div class="line">hash_table_print(table, <span class="keyword">false</span>);</div>
 <div class="line"> </div>
 <div class="line"><span class="comment">// Free HashTable</span></div>
-<div class="line"><a class="code hl_function" href="hash__table_8h.html#a0bade541b10532f274e5ee78746e6196">hash_table_destroy</a>(table);</div>
+<div class="line">hash_table_destroy(table);</div>
 <div class="ttc" id="ahash__table_8h_html"><div class="ttname"><a href="hash__table_8h.html">hash_table.h</a></div><div class="ttdoc">Public API for HashTable.</div></div>
-<div class="ttc" id="ahash__table_8h_html_a085d39918c30cf7ca3724c1f14a17bcd"><div class="ttname"><a href="hash__table_8h.html#a085d39918c30cf7ca3724c1f14a17bcd">hash_table_delete</a></div><div class="ttdeci">bool hash_table_delete(HashTable *table, int key)</div><div class="ttdoc">Delete entry from HashTable.</div><div class="ttdef"><b>Definition</b> hash_table_core.c:81</div></div>
-<div class="ttc" id="ahash__table_8h_html_a0bade541b10532f274e5ee78746e6196"><div class="ttname"><a href="hash__table_8h.html#a0bade541b10532f274e5ee78746e6196">hash_table_destroy</a></div><div class="ttdeci">bool hash_table_destroy(HashTable *table)</div><div class="ttdoc">Frees a HashTable from memory.</div><div class="ttdef"><b>Definition</b> hash_table_core.c:18</div></div>
-<div class="ttc" id="ahash__table_8h_html_a145041ed407574baae7b02482a62bcac"><div class="ttname"><a href="hash__table_8h.html#a145041ed407574baae7b02482a62bcac">hash_table_create</a></div><div class="ttdeci">HashTable * hash_table_create(void)</div><div class="ttdoc">Creates a new empty HashTable object.</div><div class="ttdef"><b>Definition</b> hash_table_core.c:14</div></div>
-<div class="ttc" id="ahash__table_8h_html_a3776e0784840a9609f3922b1b95c59ec"><div class="ttname"><a href="hash__table_8h.html#a3776e0784840a9609f3922b1b95c59ec">hash_table_save</a></div><div class="ttdeci">bool hash_table_save(const HashTable *table, const char *filename)</div><div class="ttdoc">Serializes a HashTable object into a .txt file.</div><div class="ttdef"><b>Definition</b> hash_table_io.c:22</div></div>
-<div class="ttc" id="ahash__table_8h_html_a8697ced64d6a6606f38717377e532a68"><div class="ttname"><a href="hash__table_8h.html#a8697ced64d6a6606f38717377e532a68">hash_table_print</a></div><div class="ttdeci">void hash_table_print(const HashTable *table, bool print_empty_buckets)</div><div class="ttdoc">Print a HashTable for debugging.</div><div class="ttdef"><b>Definition</b> hash_table_io.c:159</div></div>
-<div class="ttc" id="ahash__table_8h_html_a8b5f3fafdfff65f0c1a36c02ea712ca4"><div class="ttname"><a href="hash__table_8h.html#a8b5f3fafdfff65f0c1a36c02ea712ca4">hash_table_foreach</a></div><div class="ttdeci">void hash_table_foreach(const HashTable *table, void(*callback)(int key, int value, void *), void *user_data)</div><div class="ttdoc">Iterates through each key-value pair in a HashTable.</div><div class="ttdef"><b>Definition</b> hash_table_core.c:128</div></div>
-<div class="ttc" id="ahash__table_8h_html_a8d53f49b5d48520f25043c0e1e77f9cc"><div class="ttname"><a href="hash__table_8h.html#a8d53f49b5d48520f25043c0e1e77f9cc">hash_table_get</a></div><div class="ttdeci">const Entry * hash_table_get(const HashTable *table, int key)</div><div class="ttdoc">Get element from HashTable.</div><div class="ttdef"><b>Definition</b> hash_table_core.c:66</div></div>
-<div class="ttc" id="ahash__table_8h_html_ac3c9737f9417f37f807ab6c03b00d1d9"><div class="ttname"><a href="hash__table_8h.html#ac3c9737f9417f37f807ab6c03b00d1d9">hash_table_insert</a></div><div class="ttdeci">bool hash_table_insert(HashTable *table, int key, int value)</div><div class="ttdoc">Inserts a key-value pair into a HashTable.</div><div class="ttdef"><b>Definition</b> hash_table_core.c:33</div></div>
-<div class="ttc" id="ahash__table_8h_html_afdc97992d3940a4cc9a8f8945ace6e48"><div class="ttname"><a href="hash__table_8h.html#afdc97992d3940a4cc9a8f8945ace6e48">hash_table_load</a></div><div class="ttdeci">HashTable_LoadError hash_table_load(const char *filename, HashTable **out_table)</div><div class="ttdoc">Loads a hash table from a specified file.</div><div class="ttdef"><b>Definition</b> hash_table_io.c:42</div></div>
-<div class="ttc" id="astructentry_html"><div class="ttname"><a href="structentry.html">entry</a></div><div class="ttdoc">A hash table entry object.</div><div class="ttdef"><b>Definition</b> hash_table.h:14</div></div>
+<div class="ttc" id="ahash__table__io_8c_html_afdc97992d3940a4cc9a8f8945ace6e48"><div class="ttname"><a href="hash__table__io_8c.html#afdc97992d3940a4cc9a8f8945ace6e48">hash_table_load</a></div><div class="ttdeci">HashTable_LoadError hash_table_load(const char *filename, HashTable **out_table)</div><div class="ttdoc">Loads a hash table from a specified file.</div><div class="ttdef"><b>Definition</b> hash_table_io.c:42</div></div>
+<div class="ttc" id="astructentry_html"><div class="ttname"><a href="structentry.html">entry</a></div><div class="ttdoc">A hash table entry object.</div><div class="ttdef"><b>Definition</b> hash_table.h:20</div></div>
 </div><!-- fragment --><h1><a class="anchor" id="autotoc_md22"></a>
 Compile</h1>
 <p>Compile using <b>CMake</b>.</p>
