--- a/md_docs_2interactive__mode.html
+++ b/md_docs_2interactive__mode.html
@@ -107,17 +107,18 @@ Available commands:</h2>
 </ul>
 <h2><a class="anchor" id="autotoc_md2"></a>
 Example usage</h2>
-<div class="fragment"><div class="line">CHashTable Interactive Mode</div>
-<div class="line">---------------------------</div>
+<div class="fragment"><div class="line">CHashTable Interactive mode</div>
+<div class="line">Type &#39;help&#39; for available commands</div>
+<div class="line"> </div>
+<div class="line">&gt; help</div>
 <div class="line">Available commands:</div>
-<div class="line">&gt; add {key} {value}</div>
-<div class="line">&gt; get {key}</div>
-<div class="line">&gt; del {key}</div>
-<div class="line">&gt; save</div>
-<div class="line">&gt; load</div>
-<div class="line">&gt; print</div>
-<div class="line">&gt; exit</div>
-<div class="line">---------------------------</div>
+<div class="line">- `add {key} {value}`: adds a key-value pair to the table</div>
+<div class="line">- `get {key}`: get a value associated to the key</div>
+<div class="line">- `del {key}`: deletes an entry</div>
+<div class="line">- `save`: saves the current table</div>
+<div class="line">- `load`: loads the last saved table</div>
+<div class="line">- `print`: prints the table</div>
+<div class="line">- `exit`: exits interactive mode</div>
 <div class="line"> </div>
 <div class="line">&gt; add 1 10</div>
 <div class="line">&gt; add 2 20</div>
